<resources>
    <string name="app_name" translatable="false">Meteorquest</string>
    <string name="text_logo" translatable="false">Meteorquest</string>
    <string name="text_hint_email" translatable="false">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_pseudo">Pseudo</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="already_login">Already a member? Login</string>
    <string name="valider">Valider</string>
    <string name="fermer">Fermer</string>
    <string name="message">Message</string>
    <string name="aide">Aide</string>
    <string name="item">Item</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="echange">Echange</string>
    <string name="title_activity_maps">Map</string>
</resources>
