<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.fedior.samba.meteorquest.PermissionsCheck">

    <LinearLayout
        android:layout_width='match_parent'
        android:layout_height='match_parent'
        android:orientation='vertical'
        android:padding='5dp'>

        <Button
            android:id='@+id/buttonValider'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:text="@string/valider" />

        <Button
            android:id='@+id/buttonFermer'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:text="@string/fermer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/message"
            android:id="@+id/textViewMessage" />

    </LinearLayout>

</ScrollView>
